# linq-rs

./: Cargo.toml  LICENSE  README.md
ir/: Cargo.toml
ir/src/: dml.rs  lib.rs  value.rs  variant.rs
ir/src/dml/: col.rs  cond.rs  limit.rs
ir/tests/: sql.rs
linq/: Cargo.toml
linq/src/: ddl.rs  dml.rs  driver.rs  exec.rs  from.rs  lib.rs  orm.rs  select.rs  str_like.rs  variant.rs
linq/src/dml/: cols.rs  delete.rs  insert.rs  order.rs  select.rs  update.rs
linq/src/loader/: dml.rs  mod.rs
linq/src/orm/: codegen.rs  col_like.rs  delete.rs  dsl.rs  insert.rs  mod.rs  select.rs  table.rs  update.rs
linq/src/orm/codegen/: col_like.rs  col_type.rs  cols.rs  mod.rs
linq/src/orm/dsl/: delete.rs  insert.rs  select.rs  update.rs
linq/tests/: ddl.rs  orm.rs  sql.rs
linq/tests/utils/: mod.rs
parser/: Cargo.toml  README.md
proc_macro/: Cargo.toml
proc_macro/src/: ddl.rs  dml.rs  gen.rs  lib.rs  orm.rs  rql.rs  utils.rs  variant.rs
proc_macro/src/ddl/: alter.rs  cols.rs  constraint.rs  create.rs  drop.rs  kw.rs  truncate.rs
proc_macro/src/dml/: cols.rs  cond.rs  delete.rs  from.rs  insert.rs  limit.rs  order.rs  select.rs  update.rs
proc_macro/src/orm/: col.rs  structdef.rs
proc_macro/src/rql/: cols.rs  cond.rs  delete.rs  from.rs  insert.rs  keyword.rs  kw.rs  limit.rs  limits.rs  order.rs  select.rs  update.rs  value.rs  variant.rs
proc_macro/tests/: sql.rs
sql_parser/: Cargo.toml
sql_parser/src/: ddl.rs  dml.rs  lib.rs  variant.rs
sql_parser/src/ddl/: alter.rs  cols.rs  constraint.rs  create.rs  drop.rs  truncate.rs
sql_parser/src/dml/: cols.rs  cond.rs  delete.rs  from.rs  insert.rs  kw.rs  limit.rs  order.rs  select.rs  update.rs
sql_parser/src/orm/: col.rs
