[package]
name = "linq_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
log = "0.4.16"
linq_proc_macro = {path = "../proc_macro"}
async-trait = "0.1.58"
chrono = "0.4.23"
num = "0.4"

[dev-dependencies]
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
async-std = {version = "1.11.0", features = ["attributes", "default"]}
linq_proc_macro = {path = "../proc_macro"}

