[package]
name = "linq_proc_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
proc-macro2 = "^1"
quote = "^1"
syn = {version = "^1",features=["full"]}
serde = {version = "1.0.150",features = ["derive"]}

[dev-dependencies]
linq_rs_ir = {path = "../ir"}
async-std = {version = "1.11.0", features = ["attributes", "default"]}

[lib]
proc-macro = true

