[package]
name = "linq_proc_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
proc-macro2 = "^1"
quote = "^1"
syn = {version = "^1",features=["full"]}
serde = {version = "1.0.150",features = ["derive"]}
linq_sql_parser = {path = "../sql_parser"}

[lib]
proc-macro = true

[dev-dependencies]
# linq_rs = {path = "../linq"}